--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
     <string name="app_name">PostalCalculator</string>
     <string name="action_settings">Settings</string>
+    <string name="weight_label">Enter Weight</string>
+
+    <string-array name="homescreen_array_options_country">
+        <item>Canada</item>
+        <item>US</item>
+        <item>International</item>
+    </string-array>
+
+    <string-array name="homescreen_array_options_item_type">
+        <item>Stamps in booklets/coils/panes</item>
+        <item>Meter or Postal Indicia</item>
+        <item>Stamp(s)</item>
+    </string-array>
+
+    <string-array name="homescreen_array_options_category">
+        <item>Standard Letter-Post</item>
+        <item>Other</item>
+    </string-array>
 </resources>
